# MDtong

./: .env.example  .gitignore  6.0.0  LICENSE  MD通.spec  README.md  build.bat  config.json  convert.py  generate_samples.py  pyproject.toml  requirements.txt  test.docx
converter/: __init__.py  ai_polish.py  config.py  generator.py  gui.py  gui_app.py  html_export.py  logging_config.py  parser.py  pdf_export.py  reverse.py  services.py  templates.py  validator.py
converter/gui_modules/: __init__.py
templates/: 周报.md  普通文档.md  设计文档.md  需求文档.md
tests/: test_generator.py  test_parser.py  test_reverse.py  test_services.py  test_validator.py
